# ooplr4

./: CMakeLists.txt
include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  ScalarType.h  Trapezoid.h
src/: main.cpp
tests/: tests.cpp
